Fix issue with focus state in mobile view on logo not aligning

--- a/style.css
+++ b/style.css
@@ -1347,7 +1347,6 @@ span {
 
   .logo img,
   a.logo {
-    margin-top: 15px;
     width: 6rem;
     height: 6rem;
   }
